--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-svg": "^12.1.1",
@@ -50,7 +51,9 @@
       "node"
     ]
   },
-  "rnpm":{
-    "assets":["./assets/fonts/"]
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
