--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.1.1",
     "styled-components": "^5.3.3"
   },
